--- a/galaxypets/galaxypets-site/games.html
+++ b/galaxypets/galaxypets-site/games.html
@@ -39,9 +39,9 @@
             <tr>
                 <td>
                     <section class="newspaper">
-                        <h2>Shoot for the Stars</h2>
+                        <h2>2048</h2>
                         <figure>
-                            <a href="#"><img src="img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
+                            <a href="2048/index.html"><img src="img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
                             <figcaption>featured: lilac glorbus</figcaption>
                         </figure>
                     </section>
