--- a/galaxypets/galaxypets-site/clubs.html
+++ b/galaxypets/galaxypets-site/clubs.html
@@ -45,7 +45,7 @@
                             <figcaption>Population: 5</figcaption>
                             <figcaption>Online: 4</figcaption>
                         </figure>
-                        <button id="joinchat"> Join Chat </button>
+                        <button id="joinchat" onclick="window.location.href = 'clubs/AtomsHalo.html'"> Join Chat </button>
                     </section>
                 </td>
                 <td>
@@ -56,7 +56,7 @@
                             <figcaption>Population: 3</figcaption>
                             <figcaption>Online: 1</figcaption>
                         </figure>
-                        <button id="joinchat"> Join Chat </button>
+                        <button id="joinchat" onclick="window.location.href = 'clubs/GalaxyGlitter.html'"> Join Chat </button>
                     </section>
                 </td>
                 <td>
@@ -67,7 +67,7 @@
                             <figcaption>Population: 6</figcaption>
                             <figcaption>Online: 5</figcaption>
                         </figure>
-                        <button id="joinchat"> Join Chat </button>
+                        <button id="joinchat" onclick="window.location.href = 'clubs/ZeroGravity.html'"> Join Chat </button>
                     </section>
                 </td>
                 <td>
@@ -78,7 +78,7 @@
                             <figcaption>Population: 4</figcaption>
                             <figcaption>Online: 0</figcaption>
                         </figure>
-                        <button id="joinchat"> Join Chat </button>
+                        <button id="joinchat" onclick="window.location.href = 'clubs/Orbitors.html'"> Join Chat </button>
                     </section>
                 </td>
             </tr>
