--- a/galaxypets/galaxypets-site/games.html
+++ b/galaxypets/galaxypets-site/games.html
@@ -41,7 +41,7 @@
                     <section class="newspaper">
                         <h2>2048</h2>
                         <figure>
-                            <a href="2048/index.html"><img src="img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
+                            <a href="games/2048/index.html"><img src="img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
                             <figcaption>featured: lilac glorbus</figcaption>
                         </figure>
                     </section>
