ok now its fixed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalaxyPets - Your Space Adventure Begins!</title>
-    <link rel="stylesheet" href="/Assets/css/style.css">
-    <link rel="preload" href="/Assets/img/aquagalaxy_small.gif" as="image">
+    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="preload" href="Assets/img/aquagalaxy_small.gif" as="image">
 </head>
 <body>
 <header>
@@ -13,9 +13,9 @@
         <div class="logo">GalaxyPets</div>
         <ul>
             <li class="dropdown">
-                <a href="./petprofile.html">Your Pet/Profile</a>
+                <a href="Pages/petprofile.html">Your Pet/Profile</a>
                 <div class="./dropdown-content">
-                    <a href="./petprofile.html">My GalaxyPet</a>
+                    <a href="Pages/petprofile.html">My GalaxyPet</a>
                     <a href="#">Closet</a>
                     <a href="#">Settings</a>
                 </div>
@@ -23,11 +23,11 @@
             <li class="dropdown">
                 Community
                 <div class="dropdown-content">
-                    <a href="clubs.html">Clubs</a>
+                    <a href="Pages/clubs.html">Clubs</a>
                     <a href="#">Users</a>
                 </div>
             </li>
-            <li><a href="games.html">Games</a></li>
+            <li><a href="Pages/games.html">Games</a></li>
             <li><a href="#">Shop</a></li>
         </ul>
     </nav>
@@ -37,13 +37,11 @@
     •°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ
 </marquee>
 
-<!--<img src="/Assets/img/aquagalaxy_small.gif" alt="Test GIF">-->
-
 <main>
     <section class="newspaper">
         <h2>GalaxyPets Daily News // Stardate 2025.03.10</h2>
         <figure>
-            <img src="/Assets/img/glorbus/green.PNG" alt="New Pets Added">
+            <img src="Assets/img/glorbus/green.PNG" alt="New Pets Added">
             <figcaption>featured: green glorbus</figcaption>
         </figure>
         <h2>New Cosmic Creature: Glorbus is Here!</h2>
@@ -63,25 +61,25 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="/Assets/img/planets/lavenderplanet.png" alt="planets">
+                        <img src="Assets/img/planets/lavenderplanet.png" alt="planets">
                         <figcaption>Atom's Halo</figcaption>
                     </figure>
                 </td>
                 <td>
                     <figure>
-                        <img src="/Assets/img/planets/greenandpinkplanet.png" alt="planets">
+                        <img src="Assets/img/planets/greenandpinkplanet.png" alt="planets">
                         <figcaption>Galaxy Glitter</figcaption>
                     </figure>
                 </td>
                 <td>
                     <figure>
-                        <img src="/Assets/img/planets/purpleplanet.png" alt="planets">
+                        <img src="Assets/img/planets/purpleplanet.png" alt="planets">
                         <figcaption>Zero Gravity</figcaption>
                     </figure>
                 </td>
                 <td>
                     <figure>
-                        <img src="/Assets/img/planets/blueplanet.png" alt="planets">
+                        <img src="Assets/img/planets/blueplanet.png" alt="planets">
                         <figcaption>Orbitors</figcaption>
                     </figure>
                 </td>
@@ -109,7 +107,7 @@
     <section class="newspaper">
         <h2>GalaxyPets Daily News // Stardate 2025.03.09</h2>
         <figure>
-            <img src="/Assets/img/jelly/lightpurple.png" alt="New Pets Added">
+            <img src="Assets/img/jelly/lightpurple.png" alt="New Pets Added">
             <figcaption>featured: light purple stardust jelly</figcaption>
         </figure>
         <h2>New Cosmic Creature: The Stardust Jelly has arrived!</h2>
