--- a/Pages/games.html
+++ b/Pages/games.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalaxyPets - Your Space Adventure Begins!</title>
-    <link rel="stylesheet" href="/Assets/css/style.css">
-    <link rel="preload" href="/Assets/img/aquagalaxy_small.gif" as="image">
+    <link rel="stylesheet" href="../Assets/css/style.css">
+    <link rel="preload" href="../Assets/img/aquagalaxy_small.gif" as="image">
 </head>
 <body>
 <header>
     <nav>
-        <div class="logo"><a href="index.html" style="text-decoration: none;">GalaxyPets</a></div>
+        <div class="logo"><a href="../index.html" style="text-decoration: none;">GalaxyPets</a></div>
         <ul>
             <li class="dropdown">
                 <a href="petprofile.html">Your Pet/Profile</a>
@@ -27,7 +27,7 @@
                     <a href="#">Users</a>
                 </div>
             </li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="#">Shop</a></li>
         </ul>
     </nav>
@@ -44,7 +44,7 @@
                 <section class="newspaper">
                     <h2>2048</h2>
                     <figure>
-                        <a href="/Games/2048/index.html"><img src="/Assets/img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
+                        <a href="../Games/2048/index.html"><img src="../Assets/img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
                         <figcaption>featured: lilac glorbus</figcaption>
                     </figure>
                 </section>
@@ -53,7 +53,7 @@
                 <section class="newspaper">
                     <h2>Goodnight moon</h2>
                     <figure>
-                        <a href="#"><img src="/Assets/img/jelly/sleepy/blue.png" alt="blue jelly"></a>
+                        <a href="#"><img src="../Assets/img/jelly/sleepy/blue.png" alt="blue jelly"></a>
                         <figcaption>featured: blue stardust jelly</figcaption>
                     </figure>
                 </section>
@@ -62,7 +62,7 @@
                 <section class="newspaper">
                     <h2>Space Zapper</h2>
                     <figure>
-                        <a href="#"><img src="/Assets/img/jelly/ouch/pink.png" alt="pink jelly"></a>
+                        <a href="#"><img src="../Assets/img/jelly/ouch/pink.png" alt="pink jelly"></a>
                         <figcaption>featured: pink stardust jelly</figcaption>
                     </figure>
                 </section>
