--- a/Pages/petprofile.html
+++ b/Pages/petprofile.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyGalaxyPet Profile - GalaxyPets</title>
-    <link rel="stylesheet" href="/Assets/css/profilestyle.css">
+    <link rel="stylesheet" href="../Assets/css/profilestyle.css">
 </head>
 <body>
 <header>
     <nav>
-        <div class="logo"><a href="index.html" style="text-decoration: none;">GalaxyPets</a></div>
+        <div class="logo"><a href="../index.html" style="text-decoration: none;">GalaxyPets</a></div>
         <ul>
-            <li><a href="index.html">Back to Home</a></li>
+            <li><a href="../index.html">Back to Home</a></li>
             <li class="dropdown">
                 Community
                 <div class="dropdown-content">
