--- a/Pages/clubs/ZeroGravity.html
+++ b/Pages/clubs/ZeroGravity.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalaxyPets - Your Space Adventure Begins!</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../Assets/css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="index.html" style="text-decoration: none;">GalaxyPets</a></div>
+            <div class="logo"><a href="../../index.html" style="text-decoration: none;">GalaxyPets</a></div>
             <ul>
                 <li class="dropdown">
                     <a href="../petprofile.html">Your Pet/Profile</a>
@@ -36,9 +36,9 @@
 
     <main>
         <section class="newspaper">
-            <h2>Atom's Halo</h2>
+            <h2>Zero Gravity</h2>
             <figure>
-                <a href="#"><img src="../img/planets/lavenderplanet.png" style="width: 100px;" alt="halo planet"></a>
+                <a href="#"><img src="../../Assets/img/planets/purpleplanet.png" style="width: 100px;" alt="halo planet"></a>
                 <figcaption>Population: 5</figcaption>
                 <figcaption>Online: 4</figcaption>
             </figure>
