--- a/Pages/games.html
+++ b/Pages/games.html
@@ -44,7 +44,7 @@
                 <section class="newspaper">
                     <h2>2048</h2>
                     <figure>
-                        <a href="../Games/2048/index.html"><img src="../Assets/img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
+                        <a href="Games/2048/2048Game.html"><img src="../Assets/img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
                         <figcaption>featured: lilac glorbus</figcaption>
                     </figure>
                 </section>
