--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <base href="/Galaxypets/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalaxyPets - Your Space Adventure Begins!</title>
     <link rel="stylesheet" href="Assets/css/style.css">
-    <link rel="preload" href="../Assets/img/aquagalaxy_small.gif" as="image">
+    <link rel="preload" href="Assets/img/aquagalaxy_small.gif" as="image">
 </head>
 <body>
 <header>
