--- a/Pages/clubs.html
+++ b/Pages/clubs.html
@@ -28,7 +28,7 @@
             <li class="dropdown nav-item">
                 <a href="clubs.html">Community</a>
                 <div class="dropdown-content">
-                    <a href="#">Clubs</a>
+                    <a href="clubs.html">Clubs</a>
                     <a href="#">Users</a>
                 </div>
             </li>
@@ -38,19 +38,19 @@
     </nav>
 </header>
 
-<main>
-    <marquee behavior=scroll direction="left" scrollamount="5" style="color: #17ffee;">
-        •°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ
-    </marquee>
+<marquee behavior=scroll direction="left" scrollamount="5" style="color: #17ffee;">
+    •°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ
+</marquee>
 
+<main>
     <section class="planet-grid" aria-label="Club Planets">
         <!-- The js fills this in with the links to the planets,  the json is editable there -->
     </section>
-
-    <marquee  behavior=scroll direction="right" scrollamount="5" style="color: #17ffee;">
-        •°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ
-    </marquee>
 </main>
+
+<marquee  behavior=scroll direction="right" scrollamount="5" style="color: #17ffee;">
+    •°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ
+</marquee>
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center border-top footer fixed-bottom">
     <p class="col-md-4 mb-0 text-body-secondary">&copy; 2025 GalaxyPets</p>
