--- a/Pages/petprofile.html
+++ b/Pages/petprofile.html
@@ -9,9 +9,9 @@
 <body>
 <header>
     <nav>
-        <div class="logo"><a href="../index.html" style="text-decoration: none;">GalaxyPets</a></div>
+        <div class="logo"><a href="../index.php" style="text-decoration: none;">GalaxyPets</a></div>
         <ul>
-            <li><a href="../index.html">Back to Home</a></li>
+            <li><a href="../index.php">Back to Home</a></li>
             <li class="dropdown">
                 Community
                 <div class="dropdown-content">
