--- a/Pages/clubs.html
+++ b/Pages/clubs.html
@@ -15,7 +15,7 @@
 <body>
 <header class="border-bottom sticky-top">
     <nav class="navbar navbar-expand-lg d-flex align-items-center">
-        <div class="logo"><a href="../index.html" style="text-decoration: none;">GalaxyPets</a></div>
+        <div class="logo"><a href="../index.php" style="text-decoration: none;">GalaxyPets</a></div>
         <ul class="d-flex align-items-center list-unstyled m-0 ml-auto" style="margin-left: auto;">
             <li class="dropdown nav-item">
                 <a href="petprofile.html">Your Pet/Profile</a>
@@ -60,7 +60,7 @@
                href="../about.html">About Us</a></li>
         <li>
             <a class="text-body-secondary"
-               href="../index.html">Official Site</a></li>
+               href="../index.php">Official Site</a></li>
     </ul>
 </footer>
 </body>
