--- a/Pages/clubs/Orbitors.html
+++ b/Pages/clubs/Orbitors.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="../../index.html" style="text-decoration: none;">GalaxyPets</a></div>
+            <div class="logo"><a href="../../index.php" style="text-decoration: none;">GalaxyPets</a></div>
             <ul>
                 <li class="dropdown">
                     <a href="../petprofile.html">Your Pet/Profile</a>
