--- a/Pages/games.html
+++ b/Pages/games.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav>
-        <div class="logo"><a href="../index.html" style="text-decoration: none;">GalaxyPets</a></div>
+        <div class="logo"><a href="../index.php" style="text-decoration: none;">GalaxyPets</a></div>
         <ul>
             <li class="dropdown">
                 <a href="petprofile.html">Your Pet/Profile</a>
@@ -27,7 +27,7 @@
                     <a href="#">Users</a>
                 </div>
             </li>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.php">Home</a></li>
             <li><a href="#">Shop</a></li>
         </ul>
     </nav>
@@ -79,7 +79,7 @@
     <p>&copy; 2025 GalaxyPets</p>
     <ul>
         <li><a href="../about.html">About Us</a></li>
-        <li><a href="../index.html">Official Site</a></li>
+        <li><a href="../index.php">Official Site</a></li>
     </ul>
 </footer>
 </body>
