--- a/Pages/clubs/AtomsHalo.html
+++ b/Pages/clubs/AtomsHalo.html
@@ -43,7 +43,7 @@
 
 <main role="main" class="container-md">
     <section class="club-chatroom-grid">
-        <section class="left-column container">
+        <section class="left-column">
             <figure>
                 <figcaption>
                     <h2>Atoms Halo</h2>
