--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -124,12 +124,12 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="../index.html" style="text-decoration: none;">GalaxyPets</a></div>
+            <div class="logo"><a href="../index.php" style="text-decoration: none;">GalaxyPets</a></div>
             <ul>
                 <li class="dropdown">
-                    <a href="petprofile.html">Your Pet/Profile</a>
+                    <a href="petprofile.php">Your Pet/Profile</a>
                     <div class="dropdown-content">
-                        <a href="petprofile.html">My GalaxyPet</a>
+                        <a href="petprofile.php">My GalaxyPet</a>
                         <a href="#">Closet</a>
                         <a href="#">Settings</a>
                     </div>
@@ -141,7 +141,7 @@
                         <a href="#">Users</a>
                     </div>
                 </li>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../index.php">Home</a></li>
                 <li><a href="#">Shop</a></li>
             </ul>
         </nav>
