--- a/Pages/games.html
+++ b/Pages/games.html
@@ -5,32 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GalaxyPets - Your Space Adventure Begins!</title>
     <link rel="stylesheet" href="../Assets/css/style.css">
-    <link rel="preload" href="../Assets/img/aquagalaxy_small.gif" as="image">
+    <link rel="stylesheet" href="../Assets/css/gamesstyle.css">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 <header>
-    <nav>
-        <div class="logo"><a href="../index.php" style="text-decoration: none;">GalaxyPets</a></div>
-        <ul>
-            <li class="dropdown">
-                <a href="petprofile.html">Your Pet/Profile</a>
-                <div class="dropdown-content">
-                    <a href="petprofile.html">My GalaxyPet</a>
-                    <a href="#">Closet</a>
-                    <a href="#">Settings</a>
-                </div>
-            </li>
-            <li class="dropdown">
-                Community
-                <div class="dropdown-content">
-                    <a href="clubs.html">Clubs</a>
-                    <a href="#">Users</a>
-                </div>
-            </li>
-            <li><a href="../index.php">Home</a></li>
-            <li><a href="#">Shop</a></li>
-        </ul>
-    </nav>
+    <div id="navbar-container"></div>
 </header>
 
 <marquee behavior=scroll direction="left" scrollamount="5" style="color: #17ffee;">
@@ -38,51 +21,50 @@
 </marquee>
 
 <main>
-    <table>
-        <tr>
-            <td>
-                <section class="newspaper">
-                    <h2>2048</h2>
-                    <figure>
-                        <a href="Games/2048/2048Game.html"><img src="../Assets/img/glorbus/lilac.PNG" alt="lilac glorbus"></a>
-                        <figcaption>featured: lilac glorbus</figcaption>
-                    </figure>
-                </section>
-            </td>
-            <td>
-                <section class="newspaper">
-                    <h2>Goodnight moon</h2>
-                    <figure>
-                        <a href="#"><img src="../Assets/img/jelly/sleepy/blue.png" alt="blue jelly"></a>
-                        <figcaption>featured: blue stardust jelly</figcaption>
-                    </figure>
-                </section>
-            </td>
-            <td>
-                <section class="newspaper">
-                    <h2>Space Zapper</h2>
-                    <figure>
-                        <a href="#"><img src="../Assets/img/jelly/ouch/pink.png" alt="pink jelly"></a>
-                        <figcaption>featured: pink stardust jelly</figcaption>
-                    </figure>
-                </section>
-            </td>
-        </tr>
-    </table>
+    <div class="grid-container">
+        <section class="newspaper">
+            <h2>2048</h2>
+            <figure>
+                <a href="Games/2048/2048Game.html"><img src="../Assets/img/glorbus/lightpurple.PNG" alt="lilac glorbus"></a>
+                <figcaption>featured: lilac glorbus</figcaption>
+            </figure>
+        </section>
+
+        <section class="newspaper">
+            <h2>Goodnight Moon</h2>
+            <figure>
+                <a href="#"><img src="../Assets/img/jelly/sleepy/blue.png" alt="blue jelly"></a>
+                <figcaption>featured: blue stardust jelly</figcaption>
+            </figure>
+        </section>
+
+        <section class="newspaper">
+            <h2>Space Zapper</h2>
+            <figure>
+                <a href="#"><img src="../Assets/img/jelly/ouch/pink.png" alt="pink jelly"></a>
+                <figcaption>featured: pink stardust jelly</figcaption>
+            </figure>
+        </section>
+    </div>
 </main>
 
 <marquee behavior=scroll direction="right" scrollamount="5" style="color: #17ffee;">
     •°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ.•°*”˜˜”*°•.ƸӜƷ•°*”˜˜”*°•.ƸӜƷ
 </marquee>
 
-<footer>
-    <p>&copy; 2025 GalaxyPets</p>
-    <ul>
-        <li><a href="../about.html">About Us</a></li>
-        <li><a href="../index.php">Official Site</a></li>
+<footer class="d-flex flex-wrap justify-content-between align-items-center border-top footer fixed-bottom">
+    <p class="col-md-4 mb-0 text-body-secondary">&copy; 2025 GalaxyPets</p>
+    <ul class="d-flex align-items-center list-unstyled m-0 ml-auto">
+        <li>
+            <a class="text-body-secondary"
+               href="../README.md">About Us</a></li>
+        <li>
+            <a class="text-body-secondary"
+               href="#">Official Site</a></li>
     </ul>
 </footer>
+
+<script src="../Assets/js/navbar.js"></script>
+
 </body>
 </html>
-
-</html> 
