updated navbar pathing

--- a/Assets/html/navbar.html
+++ b/Assets/html/navbar.html
@@ -2,9 +2,9 @@
     <div class="logo"><a href="index.php" style="text-decoration: none;">GalaxyPets</a></div>
     <ul class="d-flex align-items-center list-unstyled m-0 ml-auto" style="margin-left: auto;">
         <li class="dropdown nav-item">
-            <a href="Pages/petprofile.html" class="nav-link">Your Pet/Profile</a>
+            <a href="Pages/petprofile.php" class="nav-link">Your Pet/Profile</a>
             <div class="dropdown-content">
-                <a href="Pages/petprofile.html" class="nav-link">My GalaxyPet</a>
+                <a href="Pages/petprofile.php" class="nav-link">My GalaxyPet</a>
                 <a href="#" class="nav-link">Closet</a>
                 <a href="#" class="nav-link">Settings</a>
             </div>
@@ -17,6 +17,6 @@
             </div>
         </li>
         <li class="nav-item"><a href="Pages/games.html" class="nav-link">Games</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Shop</a></li>
+        <li class="nav-item"><a href="shop.html" class="nav-link">Shop</a></li>
     </ul>
 </nav>
