--- a/Pages/petprofile.html
+++ b/Pages/petprofile.html
@@ -15,6 +15,10 @@
     <div id="navbar-container"></div>
 </header>
 
+<?php
+header("location: petprofile.php");
+?>
+
 <main>
     <section class="pet-profile">
         <h1>MyGalaxyPet Profile</h1>
