--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -142,7 +142,7 @@
                     </div>
                 </li>
                 <li><a href="../index.php">Home</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
