--- a/Assets/html/navbar.html
+++ b/Assets/html/navbar.html
@@ -17,6 +17,6 @@
             </div>
         </li>
         <li class="nav-item"><a href="Pages/games.html" class="nav-link">Games</a></li>
-        <li class="nav-item"><a href="shop.html" class="nav-link">Shop</a></li>
+        <li class="nav-item"><a href="Pages/shop.html" class="nav-link">Shop</a></li>
     </ul>
 </nav>
