fixed img issue on 2048

--- a/Pages/games.html
+++ b/Pages/games.html
@@ -25,7 +25,7 @@
         <section class="newspaper">
             <h2>2048</h2>
             <figure>
-                <a href="Games/2048/2048Game.html"><img src="../Assets/img/glorbus/lightpurple.png" alt="lilac glorbus"></a>
+                <a href="Games/2048Game.html"><img src="../Assets/img/glorbus/lightpurple.png" alt="lilac glorbus"></a>
                 <figcaption>featured: lilac glorbus</figcaption>
             </figure>
         </section>
