--- a/Pages/Games/2048Game.html
+++ b/Pages/Games/2048Game.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="../../../Assets/js/2048.js"></script>
+    <script src="../../Assets/js/2048.js"></script>
 
     <title>2048</title>
 
-    <link rel="stylesheet" href="../../../Assets/css/2048Style.css">
+    <link rel="stylesheet" href="../../Assets/css/2048Style.css">
 </head>
 
 
