--- a/Pages/games.html
+++ b/Pages/games.html
@@ -31,9 +31,9 @@
         </section>
 
         <section class="newspaper">
-            <h2>Goodnight Moon</h2>
+            <h2>Matching</h2>
             <figure>
-                <a href="#"><img src="../Assets/img/jelly/sleepy/blue.png" alt="blue jelly"></a>
+                <a href="Games/matching.html"><img src="../Assets/img/jelly/sleepy/blue.png" alt="blue jelly"></a>
                 <figcaption>featured: blue stardust jelly</figcaption>
             </figure>
         </section>
