--- a/Pages/Games/C4/index.html
+++ b/Pages/Games/C4/index.html
@@ -15,6 +15,7 @@
 
 
 <body>
+	
 
   <div id="container">
 
@@ -35,7 +36,7 @@
 			</tr>
 		</tbody>
 	</table>
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
 	<script src="script.js"></script>
 
 
