--- a/Pages/Games/C4/index.html
+++ b/Pages/Games/C4/index.html
@@ -17,7 +17,23 @@
 <body>
 	
 
+	<div class="container text-center" id="app">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h1>Connect 4 by parzibyte</h1>
+                <a href="https://parzibyte.me" target="_blank" class="btn btn-success mb-2 btn-lg">Help & Support <i
+                        class="fa fa-hands-helping"></i></a>
+                <div class="alert alert-info">
+                    <strong>Current player: </strong> {{currentPlayer === PLAYER_1 ? 'Player 1' : 'Player 2'}}
+                    <br>
+                    <img :src="cellImage(currentPlayer)" alt="" class="img-fluid" style="max-width: 70px;">
+                </div>
+            </div>
+        </div>
+
   <div id="container">
+
+
 
 	<table class="table table-bordered">
 		<thead>
@@ -36,7 +52,9 @@
 			</tr>
 		</tbody>
 	</table>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
+	<!-- production version, optimized for size and speed -->
+<script src="vue.js"></script>
+<script src="sweetalert2.all.min.js"></script>
 	<script src="script.js"></script>
 
 
