--- a/Pages/Games/C4/index.html
+++ b/Pages/Games/C4/index.html
@@ -20,11 +20,11 @@
 	<div class="container text-center" id="app">
         <div class="row justify-content-center">
             <div class="col-12">
-                <h1>Connect 4 by parzibyte</h1>
-                <a href="https://parzibyte.me" target="_blank" class="btn btn-success mb-2 btn-lg">Help & Support <i
+                <h1>oooo!Connect 4!oooo</h1>
+                <a href="https://parzibyte.me" target="_blank" class="btn btn-success mb-2 btn-lg"> <i
                         class="fa fa-hands-helping"></i></a>
                 <div class="alert alert-info">
-                    <strong>Current player: </strong> {{currentPlayer === PLAYER_1 ? 'Player 1' : 'Player 2'}}
+                    <strong>Current player: </strong> {{currentPlayer === PLAYER_1 ? 'You!' : 'Friend'}}
                     <br>
                     <img :src="cellImage(currentPlayer)" alt="" class="img-fluid" style="max-width: 70px;">
                 </div>
